Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <p class="location">Delhi, India</p>
           <div class="links">
             <a href="https://www.linkedin.com/in/dharamveer-shah-8b5a17256" target="_blank">🔗LinkedIn</a>
-            <a href="https://github.com/DharamveerShah" target="_blank">🐙GitHub</a>
+            <a href="https://github.com/Dharamveer-Shah" target="_blank">🐙GitHub</a>
             <a href="mailto:dharamveershah236@gmail.com">✉Email</a>
             <a href="tel:9560069871">📞 Call</a>
           </div>
@@ -267,3 +267,4 @@
 
 </body>
 </html>
+
