Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       <ul>
         <li>
           Java Certification — 
-          <a href="https://github.com/Dharamveer-shah/Java-certificate" target="_blank">View Certificate on GitHub</a>
+          <a href="https://github.com/Dharamveer-shah/Java-certificate/blob/main/java%20diploma.jpg" target="_blank">View Certificate on GitHub</a>
         </li>
         <li>Diploma in Computer Application Certification —
           <a href="https://github.com/Dharamveer-shah/certificate" target="_blank">View Certificate on GitHub</a>
@@ -302,3 +302,4 @@
 
 </body>
 </html>
+
