--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           <a href="https://github.com/Dharamveer-shah/Java-certificate/blob/main/java%20diploma.jpg" target="_blank">View Certificate on GitHub</a>
         </li>
         <li>Diploma in Computer Application Certification —
-          <a href="https://github.com/Dharamveer-shah/certificate" target="_blank">View Certificate on GitHub</a>
+          <a href="https://github.com/Dharamveer-shah/certificate/blob/main/20250925_134655.heic" target="_blank">View Certificate on GitHub</a>
         </li>
       </ul>
     </section>
@@ -302,4 +302,5 @@
 
 </body>
 </html>
+
 
