--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
       <ul>
         <li>
           Java Certification — 
-          <a href="https://github.com/Dharamveer-shah/Java-certificate/blob/main/java%20diploma.jpg" target="_blank">View Certificate on GitHub</a>
+          <a href="https://github.com/Dharamveer-shah/Java-certificate/blob/main/java%20diploma.jpg">Java Certificate</a>
         </li>
         <li>Diploma in Computer Application Certification —
-          <a href="https://github.com/Dharamveer-shah/certificate/blob/main/20250925_134655.heic" target="_blank">View Certificate on GitHub</a>
+          <a href="https://github.com/Dharamveer-shah/certificate/blob/main/20250925_134655.heic">DCAP Certificate</a>
         </li>
       </ul>
     </section>
@@ -302,5 +302,6 @@
 
 </body>
 </html>
+
 
 
