Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           <a href="https://github.com/Dharamveer-shah/Java-certificate/blob/main/java%20diploma.jpg">Java Certificate</a>
         </li>
         <li>Diploma in Computer Application Certification —
-          <a href="https://github.com/Dharamveer-shah/certificate/blob/main/20250925_134655.heic">DCAP Certificate</a>
+          <a href="https://github.com/Dharamveer-shah/certificate/blob/main/Diploma%20in%20computer%20Application.jpg">DCAP Certificate</a>
         </li>
       </ul>
     </section>
@@ -302,6 +302,7 @@
 
 </body>
 </html>
+
 
 
 
